--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.9",
     "core-js": "^3.40.0",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "openmeteo": "^1.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
